--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
       args:
         ARCH: CHANGE_ME
       dockerfile: Dockerfile
-    image: ekofr/pihole-exporter:arm64
+    image: jovalle/pihole-exporter:v0.0.1
     container_name: pihole_exporter
     expose:
       - 9617
     environment:
-      PIHOLE_HOSTNAME: CHANGE_ME 
+      PIHOLE_HOSTNAME: CHANGE_ME
       PIHOLE_PORT: CHANGE_ME
       PIHOLE_PASSWORD: CHANGE_ME
       INTERVAL: 30s
